# sqlite

./: .travis.yml  CMakeLists.txt  README.md  cdep  cdep.bat  cdep.yml  cmakeify.yml
.cdep/examples/cmake/: cmakeify.yml
